# crawler

./: .gitignore  Cargo.toml  README.md  compile_repo.py  example-config.toml
container/: .gitignore  build.sh  crawler.def  packages.txt
crawler/: Cargo.toml
crawler/src/: config.rs  interface.rs  lib.rs
crawler/src/miner/: compile.rs  dep_graph.rs  extract.rs  mod.rs
crawler/src/runner/: mod.rs  run.rs
crawler/tests/chain/: b.h
crawler/tests/many-system/: main.c  other.h  stdio.h
crawler/tests/many-system/a/: many.h
crawler/tests/many-system/b/: many.h
crawler/tests/many/a/: main.h
crawler_kernel_farer/: Cargo.toml
crawler_kernel_farer/src/: compile.rs  data.rs  interface.rs  intern.rs  main.rs
crawler_rebasedl/: Cargo.toml
crawler_rebasedl/src/: compile.rs  data.rs  interface.rs  intern.rs  main.rs  output_parser.rs
crawler_si/: Cargo.toml  README.md  build.rs  reset-tables.sql
crawler_si/passes/: CMakeLists.txt
crawler_si/passes/find_inner_loops/: FindInnerLoops.cpp
crawler_si/passes/information/: CMakeLists.txt  Information.cpp  Information.h
crawler_si/src/: compile.rs  data.rs  interface.rs  intern.rs  loops.rs  main.rs  pattern.rs  si.rs
crawler_si/tests/: loops.c
miner/: CMakeLists.txt
miner/src/: CMakeLists.txt  Compile.cpp  Compile.h  Config.h  Deps.cpp  Deps.h  Include.cpp  Include.h  Main.cpp  PreProcess.cpp  PreProcess.h  Util.cpp  Util.h
runner/: database.py  env.py  main.py  miner.py  repository.py  search.py
search/: database.py  main.py  repository.py  search.py
si/: .gitignore  CMakeLists.txt  README.md
si/find_inner_loops/: CMakeLists.txt  FindInnerLoops.cpp  FindInnerLoops.h
si/information/: Information.cpp  Information.h
si/tests/: loops.c  test.sh
src/: config.rs  main.rs
src/interface/: find_vector_si.rs  mod.rs  si.rs
src/miner/: compile.rs  dep_graph.rs  extract.rs  mod.rs  select.rs  types.rs
src/runner/: db.rs  git.rs  mod.rs  run.rs  search.rs
test/chain/: a.h
test/many/b/: main.h
