[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.8"
regex = "1.10.5"
lazy_static = "1.5.0"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "any", "mysql", "sqlite"] }
tokio = { version = "1.37", features = ["full"] }
