[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.8"
regex = "1.10.5"
lazy_static = "1.5.0"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "mysql", "sqlite"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
log = "0.4.22"
log4rs = "1.3.0"
crossbeam = "0.8.4"
chrono = "0.4.38"
