[package]
name = "crawler_kernel_farer"
version = "0.1.0"
edition = "2021"
authors = [ "Nathan Ulmer" ]

[[bin]]
name = "crawler_kernel_farer"
path = "src/main.rs"

[dependencies]
crawler = { path = "../crawler", version = "0.2.0" }
regex = "1.10.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "mysql", "sqlite"] }
tokio = { version = "1.37", features = ["full"] }
log = "0.4.22"
lazy_static = "1.5.0"
